# Rhiza

./: Cargo.toml  installer.ps1  readme.md  todo.txt
src/: installer.rs  main.rs  searcher.rs  worker.rs
wix/: License.rtf  main.wxs
