[package]
name = "rhiza"
version = "0.1.4"
edition = "2021"
description = "A windows shortcut creator / app launcher"
license = "MIT"
readme = "README.md"
keywords = ["rhiza", "rhz", "shortcut", "shortcut-creator", "app-launcher"]
categories = ["command-line-utilities"]
repository = "https://github.com/Skardyy/Rhiza"
homepage = "https://github.com/Skardyy/Rhiza"
documentation = "https://github.com/Skardyy/Rhiza"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
inquire = "0.7.5"
lnk_parser = "0.4.1"
mslnk = "0.1.8"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
shellexpand = "3.1.0"
walkdir = "2.5.0"
winapi = "0.3.9"
winreg = "0.55.0"
rayon = "1.8"
ignore = "0.4"
dirs = "5.0"
similar-string = "1.3"
chrono = "0.4.39"
indicatif = "0.17.11"
num_cpus = "1.16.0"

[[bin]]
name = "rhz"
path = "src/main.rs"
